// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Convert AST to DB rows 1`] = `
{
  "children": [
    {
      "position": {
        "end": {
          "column": 16,
          "line": 1,
          "offset": 15,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "doctype",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 16,
                      "line": 4,
                      "offset": 47,
                    },
                    "start": {
                      "column": 12,
                      "line": 4,
                      "offset": 43,
                    },
                  },
                  "type": "text",
                  "value": "text",
                },
              ],
              "position": {
                "end": {
                  "column": 24,
                  "line": 4,
                  "offset": 55,
                },
                "start": {
                  "column": 5,
                  "line": 4,
                  "offset": 36,
                },
              },
              "properties": {},
              "tagName": "title",
              "type": "element",
            },
            {
              "children": [],
              "position": {
                "end": {
                  "column": 45,
                  "line": 5,
                  "offset": 100,
                },
                "start": {
                  "column": 5,
                  "line": 5,
                  "offset": 60,
                },
              },
              "properties": {
                "rel": [
                  "stylesheet",
                ],
                "src": "test.css",
              },
              "tagName": "link",
              "type": "element",
            },
          ],
          "position": {
            "end": {
              "column": 10,
              "line": 6,
              "offset": 110,
            },
            "start": {
              "column": 3,
              "line": 3,
              "offset": 25,
            },
          },
          "properties": {},
          "tagName": "head",
          "type": "element",
        },
        {
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 35,
                      "line": 8,
                      "offset": 154,
                    },
                    "start": {
                      "column": 31,
                      "line": 8,
                      "offset": 150,
                    },
                  },
                  "type": "text",
                  "value": "test",
                },
              ],
              "position": {
                "end": {
                  "column": 39,
                  "line": 8,
                  "offset": 158,
                },
                "start": {
                  "column": 5,
                  "line": 8,
                  "offset": 124,
                },
              },
              "properties": {
                "className": [
                  "cancel-culture",
                ],
              },
              "tagName": "p",
              "type": "element",
            },
          ],
          "position": {
            "end": {
              "column": 10,
              "line": 9,
              "offset": 168,
            },
            "start": {
              "column": 3,
              "line": 7,
              "offset": 113,
            },
          },
          "properties": {},
          "tagName": "body",
          "type": "element",
        },
      ],
      "position": {
        "end": {
          "column": 8,
          "line": 10,
          "offset": 176,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 16,
        },
      },
      "properties": {},
      "tagName": "html",
      "type": "element",
    },
  ],
  "data": {
    "quirksMode": false,
  },
  "position": {
    "end": {
      "column": 8,
      "line": 10,
      "offset": 176,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Convert AST to DB rows 2`] = `
{
  "attachments": [
    {
      "child_id": "04e1b12b-c42d-4c67-916c-8acf9dec75f6",
      "parent_id": "79455613-836f-44cb-9036-de551c6c0d23",
      "position": 0,
    },
    {
      "child_id": "2115feec-c2a2-410a-b3a7-9e2593d592a3",
      "parent_id": "882bbc2b-2c53-46f0-8e9e-d1bd3e5d0e5f",
      "position": 0,
    },
    {
      "child_id": "882bbc2b-2c53-46f0-8e9e-d1bd3e5d0e5f",
      "parent_id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
      "position": 0,
    },
    {
      "child_id": "4f81f0fe-ada5-4a0a-91d4-cdb40e492271",
      "parent_id": "0d8afb3f-416a-48bc-8631-61872af9e880",
      "position": 0,
    },
    {
      "child_id": "de02bea8-04cd-4f5d-807f-2bcd3daf6ceb",
      "parent_id": "0d8afb3f-416a-48bc-8631-61872af9e880",
      "position": 1,
    },
    {
      "child_id": "0d8afb3f-416a-48bc-8631-61872af9e880",
      "parent_id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
      "position": 1,
    },
    {
      "child_id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
      "parent_id": "06e18375-1962-47be-b8d1-b272b0013bea",
      "position": 0,
    },
    {
      "child_id": "a7f94b39-a72f-4452-8ffc-f4aa652f43ed",
      "parent_id": "e57657c7-d63c-44a2-a307-b2521513f1dc",
      "position": 0,
    },
    {
      "child_id": "2953960c-9aa5-4c5a-b47d-42b20bdae370",
      "parent_id": "e57657c7-d63c-44a2-a307-b2521513f1dc",
      "position": 1,
    },
    {
      "child_id": "e57657c7-d63c-44a2-a307-b2521513f1dc",
      "parent_id": "8cadab15-b7bd-4303-8ba3-4b4044b577e0",
      "position": 0,
    },
    {
      "child_id": "8cadab15-b7bd-4303-8ba3-4b4044b577e0",
      "parent_id": "06e18375-1962-47be-b8d1-b272b0013bea",
      "position": 1,
    },
    {
      "child_id": "06e18375-1962-47be-b8d1-b272b0013bea",
      "parent_id": "79455613-836f-44cb-9036-de551c6c0d23",
      "position": 1,
    },
  ],
  "rows": [
    {
      "id": "79455613-836f-44cb-9036-de551c6c0d23",
      "name": "/",
      "type": "DOCUMENT",
      "value": null,
    },
    {
      "id": "04e1b12b-c42d-4c67-916c-8acf9dec75f6",
      "name": "!doctype",
      "type": "DOCUMENT_TYPE",
      "value": "!DOCTYPE html",
    },
    {
      "id": "06e18375-1962-47be-b8d1-b272b0013bea",
      "name": "html",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
      "name": "head",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "882bbc2b-2c53-46f0-8e9e-d1bd3e5d0e5f",
      "name": "title",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "2115feec-c2a2-410a-b3a7-9e2593d592a3",
      "name": null,
      "type": "TEXT",
      "value": "text",
    },
    {
      "id": "0d8afb3f-416a-48bc-8631-61872af9e880",
      "name": "link",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "4f81f0fe-ada5-4a0a-91d4-cdb40e492271",
      "name": "rel",
      "type": "ATTRIBUTE",
      "value": "["stylesheet"]",
    },
    {
      "id": "de02bea8-04cd-4f5d-807f-2bcd3daf6ceb",
      "name": "src",
      "type": "ATTRIBUTE",
      "value": ""test.css"",
    },
    {
      "id": "8cadab15-b7bd-4303-8ba3-4b4044b577e0",
      "name": "body",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "e57657c7-d63c-44a2-a307-b2521513f1dc",
      "name": "p",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "a7f94b39-a72f-4452-8ffc-f4aa652f43ed",
      "name": null,
      "type": "TEXT",
      "value": "test",
    },
    {
      "id": "2953960c-9aa5-4c5a-b47d-42b20bdae370",
      "name": "className",
      "type": "ATTRIBUTE",
      "value": "["cancel-culture"]",
    },
  ],
}
`;

exports[`Convert HTML to AST and back 1`] = `
{
  "children": [
    {
      "position": {
        "end": {
          "column": 16,
          "line": 1,
          "offset": 15,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "doctype",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 16,
                      "line": 4,
                      "offset": 47,
                    },
                    "start": {
                      "column": 12,
                      "line": 4,
                      "offset": 43,
                    },
                  },
                  "type": "text",
                  "value": "text",
                },
              ],
              "position": {
                "end": {
                  "column": 24,
                  "line": 4,
                  "offset": 55,
                },
                "start": {
                  "column": 5,
                  "line": 4,
                  "offset": 36,
                },
              },
              "properties": {},
              "tagName": "title",
              "type": "element",
            },
            {
              "children": [],
              "position": {
                "end": {
                  "column": 45,
                  "line": 5,
                  "offset": 100,
                },
                "start": {
                  "column": 5,
                  "line": 5,
                  "offset": 60,
                },
              },
              "properties": {
                "rel": [
                  "stylesheet",
                ],
                "src": "test.css",
              },
              "tagName": "link",
              "type": "element",
            },
          ],
          "position": {
            "end": {
              "column": 10,
              "line": 6,
              "offset": 110,
            },
            "start": {
              "column": 3,
              "line": 3,
              "offset": 25,
            },
          },
          "properties": {},
          "tagName": "head",
          "type": "element",
        },
        {
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 35,
                      "line": 8,
                      "offset": 154,
                    },
                    "start": {
                      "column": 31,
                      "line": 8,
                      "offset": 150,
                    },
                  },
                  "type": "text",
                  "value": "test",
                },
              ],
              "position": {
                "end": {
                  "column": 39,
                  "line": 8,
                  "offset": 158,
                },
                "start": {
                  "column": 5,
                  "line": 8,
                  "offset": 124,
                },
              },
              "properties": {
                "className": [
                  "cancel-culture",
                ],
              },
              "tagName": "p",
              "type": "element",
            },
          ],
          "position": {
            "end": {
              "column": 10,
              "line": 9,
              "offset": 168,
            },
            "start": {
              "column": 3,
              "line": 7,
              "offset": 113,
            },
          },
          "properties": {},
          "tagName": "body",
          "type": "element",
        },
      ],
      "position": {
        "end": {
          "column": 8,
          "line": 10,
          "offset": 176,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 16,
        },
      },
      "properties": {},
      "tagName": "html",
      "type": "element",
    },
  ],
  "data": {
    "quirksMode": false,
  },
  "position": {
    "end": {
      "column": 8,
      "line": 10,
      "offset": 176,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Convert HTML to AST and back 2`] = `"<!doctype html><html><head><title>text</title><link rel="stylesheet" src="test.css"></head><body><p class="cancel-culture">test</p></body></html>"`;

exports[`Convert DB rows to AST 1`] = `
{
  "children": [
    {
      "position": {
        "end": {
          "column": 16,
          "line": 1,
          "offset": 15,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "doctype",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 16,
                      "line": 4,
                      "offset": 47,
                    },
                    "start": {
                      "column": 12,
                      "line": 4,
                      "offset": 43,
                    },
                  },
                  "type": "text",
                  "value": "text",
                },
              ],
              "position": {
                "end": {
                  "column": 24,
                  "line": 4,
                  "offset": 55,
                },
                "start": {
                  "column": 5,
                  "line": 4,
                  "offset": 36,
                },
              },
              "properties": {},
              "tagName": "title",
              "type": "element",
            },
            {
              "children": [],
              "position": {
                "end": {
                  "column": 45,
                  "line": 5,
                  "offset": 100,
                },
                "start": {
                  "column": 5,
                  "line": 5,
                  "offset": 60,
                },
              },
              "properties": {
                "rel": [
                  "stylesheet",
                ],
                "src": "test.css",
              },
              "tagName": "link",
              "type": "element",
            },
          ],
          "position": {
            "end": {
              "column": 10,
              "line": 6,
              "offset": 110,
            },
            "start": {
              "column": 3,
              "line": 3,
              "offset": 25,
            },
          },
          "properties": {},
          "tagName": "head",
          "type": "element",
        },
        {
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 35,
                      "line": 8,
                      "offset": 154,
                    },
                    "start": {
                      "column": 31,
                      "line": 8,
                      "offset": 150,
                    },
                  },
                  "type": "text",
                  "value": "test",
                },
              ],
              "position": {
                "end": {
                  "column": 39,
                  "line": 8,
                  "offset": 158,
                },
                "start": {
                  "column": 5,
                  "line": 8,
                  "offset": 124,
                },
              },
              "properties": {
                "className": [
                  "cancel-culture",
                ],
              },
              "tagName": "p",
              "type": "element",
            },
          ],
          "position": {
            "end": {
              "column": 10,
              "line": 9,
              "offset": 168,
            },
            "start": {
              "column": 3,
              "line": 7,
              "offset": 113,
            },
          },
          "properties": {},
          "tagName": "body",
          "type": "element",
        },
      ],
      "position": {
        "end": {
          "column": 8,
          "line": 10,
          "offset": 176,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 16,
        },
      },
      "properties": {},
      "tagName": "html",
      "type": "element",
    },
  ],
  "data": {
    "quirksMode": false,
  },
  "position": {
    "end": {
      "column": 8,
      "line": 10,
      "offset": 176,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Convert DB rows to AST 2`] = `
{
  "attachments": [
    {
      "child_id": "04e1b12b-c42d-4c67-916c-8acf9dec75f6",
      "parent_id": "79455613-836f-44cb-9036-de551c6c0d23",
      "position": 0,
    },
    {
      "child_id": "2115feec-c2a2-410a-b3a7-9e2593d592a3",
      "parent_id": "882bbc2b-2c53-46f0-8e9e-d1bd3e5d0e5f",
      "position": 0,
    },
    {
      "child_id": "882bbc2b-2c53-46f0-8e9e-d1bd3e5d0e5f",
      "parent_id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
      "position": 0,
    },
    {
      "child_id": "4f81f0fe-ada5-4a0a-91d4-cdb40e492271",
      "parent_id": "0d8afb3f-416a-48bc-8631-61872af9e880",
      "position": 0,
    },
    {
      "child_id": "de02bea8-04cd-4f5d-807f-2bcd3daf6ceb",
      "parent_id": "0d8afb3f-416a-48bc-8631-61872af9e880",
      "position": 1,
    },
    {
      "child_id": "0d8afb3f-416a-48bc-8631-61872af9e880",
      "parent_id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
      "position": 1,
    },
    {
      "child_id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
      "parent_id": "06e18375-1962-47be-b8d1-b272b0013bea",
      "position": 0,
    },
    {
      "child_id": "a7f94b39-a72f-4452-8ffc-f4aa652f43ed",
      "parent_id": "e57657c7-d63c-44a2-a307-b2521513f1dc",
      "position": 0,
    },
    {
      "child_id": "2953960c-9aa5-4c5a-b47d-42b20bdae370",
      "parent_id": "e57657c7-d63c-44a2-a307-b2521513f1dc",
      "position": 1,
    },
    {
      "child_id": "e57657c7-d63c-44a2-a307-b2521513f1dc",
      "parent_id": "8cadab15-b7bd-4303-8ba3-4b4044b577e0",
      "position": 0,
    },
    {
      "child_id": "8cadab15-b7bd-4303-8ba3-4b4044b577e0",
      "parent_id": "06e18375-1962-47be-b8d1-b272b0013bea",
      "position": 1,
    },
    {
      "child_id": "06e18375-1962-47be-b8d1-b272b0013bea",
      "parent_id": "79455613-836f-44cb-9036-de551c6c0d23",
      "position": 1,
    },
  ],
  "rows": [
    {
      "id": "79455613-836f-44cb-9036-de551c6c0d23",
      "name": "/",
      "type": "DOCUMENT",
      "value": null,
    },
    {
      "id": "04e1b12b-c42d-4c67-916c-8acf9dec75f6",
      "name": "!doctype",
      "type": "DOCUMENT_TYPE",
      "value": "!DOCTYPE html",
    },
    {
      "id": "06e18375-1962-47be-b8d1-b272b0013bea",
      "name": "html",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
      "name": "head",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "882bbc2b-2c53-46f0-8e9e-d1bd3e5d0e5f",
      "name": "title",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "2115feec-c2a2-410a-b3a7-9e2593d592a3",
      "name": null,
      "type": "TEXT",
      "value": "text",
    },
    {
      "id": "0d8afb3f-416a-48bc-8631-61872af9e880",
      "name": "link",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "4f81f0fe-ada5-4a0a-91d4-cdb40e492271",
      "name": "rel",
      "type": "ATTRIBUTE",
      "value": "["stylesheet"]",
    },
    {
      "id": "de02bea8-04cd-4f5d-807f-2bcd3daf6ceb",
      "name": "src",
      "type": "ATTRIBUTE",
      "value": ""test.css"",
    },
    {
      "id": "8cadab15-b7bd-4303-8ba3-4b4044b577e0",
      "name": "body",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "e57657c7-d63c-44a2-a307-b2521513f1dc",
      "name": "p",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "a7f94b39-a72f-4452-8ffc-f4aa652f43ed",
      "name": null,
      "type": "TEXT",
      "value": "test",
    },
    {
      "id": "2953960c-9aa5-4c5a-b47d-42b20bdae370",
      "name": "className",
      "type": "ATTRIBUTE",
      "value": "["cancel-culture"]",
    },
  ],
}
`;

exports[`Convert DB rows to AST 3`] = `
[
  {
    "children": [
      {
        "data": {
          "id": "04e1b12b-c42d-4c67-916c-8acf9dec75f6",
        },
        "type": "doctype",
      },
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "data": {
                      "id": "2115feec-c2a2-410a-b3a7-9e2593d592a3",
                    },
                    "type": "text",
                    "value": "text",
                  },
                ],
                "data": {
                  "id": "882bbc2b-2c53-46f0-8e9e-d1bd3e5d0e5f",
                },
                "properties": {},
                "tagName": "title",
                "type": "element",
              },
              {
                "children": [],
                "data": {
                  "id": "0d8afb3f-416a-48bc-8631-61872af9e880",
                },
                "properties": {
                  "rel": [
                    "stylesheet",
                  ],
                  "src": "test.css",
                },
                "tagName": "link",
                "type": "element",
              },
            ],
            "data": {
              "id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
            },
            "properties": {},
            "tagName": "head",
            "type": "element",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "data": {
                      "id": "a7f94b39-a72f-4452-8ffc-f4aa652f43ed",
                    },
                    "type": "text",
                    "value": "test",
                  },
                ],
                "data": {
                  "id": "e57657c7-d63c-44a2-a307-b2521513f1dc",
                },
                "properties": {
                  "class": [
                    "cancel-culture",
                  ],
                },
                "tagName": "p",
                "type": "element",
              },
            ],
            "data": {
              "id": "8cadab15-b7bd-4303-8ba3-4b4044b577e0",
            },
            "properties": {},
            "tagName": "body",
            "type": "element",
          },
        ],
        "data": {
          "id": "06e18375-1962-47be-b8d1-b272b0013bea",
        },
        "properties": {},
        "tagName": "html",
        "type": "element",
      },
    ],
    "data": {
      "id": "79455613-836f-44cb-9036-de551c6c0d23",
    },
    "type": "root",
  },
  {
    "data": {
      "id": "04e1b12b-c42d-4c67-916c-8acf9dec75f6",
    },
    "type": "doctype",
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "data": {
                  "id": "2115feec-c2a2-410a-b3a7-9e2593d592a3",
                },
                "type": "text",
                "value": "text",
              },
            ],
            "data": {
              "id": "882bbc2b-2c53-46f0-8e9e-d1bd3e5d0e5f",
            },
            "properties": {},
            "tagName": "title",
            "type": "element",
          },
          {
            "children": [],
            "data": {
              "id": "0d8afb3f-416a-48bc-8631-61872af9e880",
            },
            "properties": {
              "rel": [
                "stylesheet",
              ],
              "src": "test.css",
            },
            "tagName": "link",
            "type": "element",
          },
        ],
        "data": {
          "id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
        },
        "properties": {},
        "tagName": "head",
        "type": "element",
      },
      {
        "children": [
          {
            "children": [
              {
                "data": {
                  "id": "a7f94b39-a72f-4452-8ffc-f4aa652f43ed",
                },
                "type": "text",
                "value": "test",
              },
            ],
            "data": {
              "id": "e57657c7-d63c-44a2-a307-b2521513f1dc",
            },
            "properties": {
              "class": [
                "cancel-culture",
              ],
            },
            "tagName": "p",
            "type": "element",
          },
        ],
        "data": {
          "id": "8cadab15-b7bd-4303-8ba3-4b4044b577e0",
        },
        "properties": {},
        "tagName": "body",
        "type": "element",
      },
    ],
    "data": {
      "id": "06e18375-1962-47be-b8d1-b272b0013bea",
    },
    "properties": {},
    "tagName": "html",
    "type": "element",
  },
  {
    "children": [
      {
        "children": [
          {
            "data": {
              "id": "2115feec-c2a2-410a-b3a7-9e2593d592a3",
            },
            "type": "text",
            "value": "text",
          },
        ],
        "data": {
          "id": "882bbc2b-2c53-46f0-8e9e-d1bd3e5d0e5f",
        },
        "properties": {},
        "tagName": "title",
        "type": "element",
      },
      {
        "children": [],
        "data": {
          "id": "0d8afb3f-416a-48bc-8631-61872af9e880",
        },
        "properties": {
          "rel": [
            "stylesheet",
          ],
          "src": "test.css",
        },
        "tagName": "link",
        "type": "element",
      },
    ],
    "data": {
      "id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
    },
    "properties": {},
    "tagName": "head",
    "type": "element",
  },
  {
    "children": [
      {
        "data": {
          "id": "2115feec-c2a2-410a-b3a7-9e2593d592a3",
        },
        "type": "text",
        "value": "text",
      },
    ],
    "data": {
      "id": "882bbc2b-2c53-46f0-8e9e-d1bd3e5d0e5f",
    },
    "properties": {},
    "tagName": "title",
    "type": "element",
  },
  {
    "data": {
      "id": "2115feec-c2a2-410a-b3a7-9e2593d592a3",
    },
    "type": "text",
    "value": "text",
  },
  {
    "children": [],
    "data": {
      "id": "0d8afb3f-416a-48bc-8631-61872af9e880",
    },
    "properties": {
      "rel": [
        "stylesheet",
      ],
      "src": "test.css",
    },
    "tagName": "link",
    "type": "element",
  },
  {
    "data": {
      "id": "4f81f0fe-ada5-4a0a-91d4-cdb40e492271",
    },
    "tagName": "rel",
    "type": "attribute",
    "value": "["stylesheet"]",
  },
  {
    "data": {
      "id": "de02bea8-04cd-4f5d-807f-2bcd3daf6ceb",
    },
    "tagName": "src",
    "type": "attribute",
    "value": ""test.css"",
  },
  {
    "children": [
      {
        "children": [
          {
            "data": {
              "id": "a7f94b39-a72f-4452-8ffc-f4aa652f43ed",
            },
            "type": "text",
            "value": "test",
          },
        ],
        "data": {
          "id": "e57657c7-d63c-44a2-a307-b2521513f1dc",
        },
        "properties": {
          "class": [
            "cancel-culture",
          ],
        },
        "tagName": "p",
        "type": "element",
      },
    ],
    "data": {
      "id": "8cadab15-b7bd-4303-8ba3-4b4044b577e0",
    },
    "properties": {},
    "tagName": "body",
    "type": "element",
  },
  {
    "children": [
      {
        "data": {
          "id": "a7f94b39-a72f-4452-8ffc-f4aa652f43ed",
        },
        "type": "text",
        "value": "test",
      },
    ],
    "data": {
      "id": "e57657c7-d63c-44a2-a307-b2521513f1dc",
    },
    "properties": {
      "class": [
        "cancel-culture",
      ],
    },
    "tagName": "p",
    "type": "element",
  },
  {
    "data": {
      "id": "a7f94b39-a72f-4452-8ffc-f4aa652f43ed",
    },
    "type": "text",
    "value": "test",
  },
  {
    "data": {
      "id": "2953960c-9aa5-4c5a-b47d-42b20bdae370",
    },
    "tagName": "className",
    "type": "attribute",
    "value": "["cancel-culture"]",
  },
]
`;

exports[`Convert DB rows to AST 4`] = `"<!doctype html><html><head><title>text</title><link rel="stylesheet" src="test.css"></head><body><p class="cancel-culture">test</p></body></html>"`;

exports[`Tree Difference and Apply 1`] = `
[
  {
    "id": "guid2",
    "node": {
      "type": "text",
      "value": "changed",
    },
    "type": "update",
  },
  {
    "id": "guid3",
    "node": {
      "children": [],
      "id": "guid3",
      "name": "p",
      "properties": {},
      "type": "element",
      "value": null,
    },
    "parentId": "guid1",
    "type": "insert",
  },
]
`;

exports[`Tree Difference and Apply 2`] = `
{
  "children": [
    {
      "id": "guid2",
      "name": null,
      "properties": {},
      "type": "text",
      "value": "changed",
    },
    {
      "children": [],
      "id": "guid3",
      "name": "p",
      "properties": {},
      "type": "element",
      "value": null,
    },
  ],
  "id": "guid1",
  "name": "p",
  "type": "element",
}
`;

exports[`Complex Example 1`] = `
{
  "children": [
    {
      "position": {
        "end": {
          "column": 16,
          "line": 1,
          "offset": 15,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "doctype",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "position": {
                "end": {
                  "column": 27,
                  "line": 4,
                  "offset": 56,
                },
                "start": {
                  "column": 3,
                  "line": 4,
                  "offset": 32,
                },
              },
              "properties": {
                "charSet": "utf8",
              },
              "tagName": "meta",
              "type": "element",
            },
            {
              "children": [],
              "position": {
                "end": {
                  "column": 73,
                  "line": 6,
                  "offset": 201,
                },
                "start": {
                  "column": 3,
                  "line": 6,
                  "offset": 131,
                },
              },
              "properties": {
                "content": "width=device-width,initial-scale=1",
                "name": "viewport",
              },
              "tagName": "meta",
              "type": "element",
            },
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 25,
                      "line": 7,
                      "offset": 226,
                    },
                    "start": {
                      "column": 10,
                      "line": 7,
                      "offset": 211,
                    },
                  },
                  "type": "text",
                  "value": "Example Domainz",
                },
              ],
              "position": {
                "end": {
                  "column": 33,
                  "line": 7,
                  "offset": 234,
                },
                "start": {
                  "column": 3,
                  "line": 7,
                  "offset": 204,
                },
              },
              "properties": {},
              "tagName": "title",
              "type": "element",
            },
            {
              "children": [],
              "position": {
                "end": {
                  "column": 53,
                  "line": 8,
                  "offset": 287,
                },
                "start": {
                  "column": 3,
                  "line": 8,
                  "offset": 237,
                },
              },
              "properties": {
                "src": "/m/update.js",
                "type": "module",
              },
              "tagName": "script",
              "type": "element",
            },
            {
              "children": [],
              "position": {
                "end": {
                  "column": 51,
                  "line": 9,
                  "offset": 338,
                },
                "start": {
                  "column": 3,
                  "line": 9,
                  "offset": 290,
                },
              },
              "properties": {
                "src": "/m/edit.js",
                "type": "module",
              },
              "tagName": "script",
              "type": "element",
            },
            {
              "children": [],
              "position": {
                "end": {
                  "column": 47,
                  "line": 10,
                  "offset": 385,
                },
                "start": {
                  "column": 3,
                  "line": 10,
                  "offset": 341,
                },
              },
              "properties": {
                "href": "/s/base.css",
                "rel": [
                  "stylesheet",
                ],
              },
              "tagName": "link",
              "type": "element",
            },
            {
              "children": [],
              "position": {
                "end": {
                  "column": 47,
                  "line": 11,
                  "offset": 432,
                },
                "start": {
                  "column": 3,
                  "line": 11,
                  "offset": 388,
                },
              },
              "properties": {
                "href": "/s/edit.css",
                "rel": [
                  "stylesheet",
                ],
              },
              "tagName": "link",
              "type": "element",
            },
          ],
          "position": {
            "end": {
              "column": 8,
              "line": 12,
              "offset": 440,
            },
            "start": {
              "column": 1,
              "line": 3,
              "offset": 23,
            },
          },
          "properties": {},
          "tagName": "head",
          "type": "element",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 32,
                          "line": 15,
                          "offset": 487,
                        },
                        "start": {
                          "column": 9,
                          "line": 15,
                          "offset": 464,
                        },
                      },
                      "type": "text",
                      "value": "Header is all we got yo",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 37,
                      "line": 15,
                      "offset": 492,
                    },
                    "start": {
                      "column": 5,
                      "line": 15,
                      "offset": 460,
                    },
                  },
                  "properties": {},
                  "tagName": "h1",
                  "type": "element",
                },
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 142,
                          "line": 16,
                          "offset": 634,
                        },
                        "start": {
                          "column": 8,
                          "line": 16,
                          "offset": 500,
                        },
                      },
                      "type": "text",
                      "value": "Hi there. This is a message from your cats. We are here to tell you that this domain is for use in illustrative examples in documents.",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 146,
                      "line": 16,
                      "offset": 638,
                    },
                    "start": {
                      "column": 5,
                      "line": 16,
                      "offset": 497,
                    },
                  },
                  "properties": {},
                  "tagName": "p",
                  "type": "element",
                },
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 26,
                          "line": 17,
                          "offset": 664,
                        },
                        "start": {
                          "column": 8,
                          "line": 17,
                          "offset": 646,
                        },
                      },
                      "type": "text",
                      "value": "If you want more, ",
                    },
                    {
                      "children": [
                        {
                          "position": {
                            "end": {
                              "column": 92,
                              "line": 17,
                              "offset": 730,
                            },
                            "start": {
                              "column": 73,
                              "line": 17,
                              "offset": 711,
                            },
                          },
                          "type": "text",
                          "value": "More information...",
                        },
                      ],
                      "position": {
                        "end": {
                          "column": 96,
                          "line": 17,
                          "offset": 734,
                        },
                        "start": {
                          "column": 26,
                          "line": 17,
                          "offset": 664,
                        },
                      },
                      "properties": {
                        "href": "https://www.iana.org/domains/example",
                      },
                      "tagName": "a",
                      "type": "element",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 100,
                      "line": 17,
                      "offset": 738,
                    },
                    "start": {
                      "column": 5,
                      "line": 17,
                      "offset": 643,
                    },
                  },
                  "properties": {},
                  "tagName": "p",
                  "type": "element",
                },
              ],
              "position": {
                "end": {
                  "column": 9,
                  "line": 18,
                  "offset": 747,
                },
                "start": {
                  "column": 3,
                  "line": 14,
                  "offset": 450,
                },
              },
              "properties": {},
              "tagName": "div",
              "type": "element",
            },
          ],
          "position": {
            "end": {
              "column": 8,
              "line": 19,
              "offset": 755,
            },
            "start": {
              "column": 1,
              "line": 13,
              "offset": 441,
            },
          },
          "properties": {},
          "tagName": "body",
          "type": "element",
        },
      ],
      "position": {
        "end": {
          "column": 8,
          "line": 20,
          "offset": 763,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 16,
        },
      },
      "properties": {},
      "tagName": "html",
      "type": "element",
    },
  ],
  "data": {
    "quirksMode": false,
  },
  "position": {
    "end": {
      "column": 8,
      "line": 20,
      "offset": 763,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Complex Example 2`] = `
{
  "attachments": [
    {
      "child_id": "04e1b12b-c42d-4c67-916c-8acf9dec75f6",
      "parent_id": "79455613-836f-44cb-9036-de551c6c0d23",
      "position": 0,
    },
    {
      "child_id": "2115feec-c2a2-410a-b3a7-9e2593d592a3",
      "parent_id": "882bbc2b-2c53-46f0-8e9e-d1bd3e5d0e5f",
      "position": 0,
    },
    {
      "child_id": "882bbc2b-2c53-46f0-8e9e-d1bd3e5d0e5f",
      "parent_id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
      "position": 0,
    },
    {
      "child_id": "4f81f0fe-ada5-4a0a-91d4-cdb40e492271",
      "parent_id": "0d8afb3f-416a-48bc-8631-61872af9e880",
      "position": 0,
    },
    {
      "child_id": "de02bea8-04cd-4f5d-807f-2bcd3daf6ceb",
      "parent_id": "0d8afb3f-416a-48bc-8631-61872af9e880",
      "position": 1,
    },
    {
      "child_id": "0d8afb3f-416a-48bc-8631-61872af9e880",
      "parent_id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
      "position": 1,
    },
    {
      "child_id": "e57657c7-d63c-44a2-a307-b2521513f1dc",
      "parent_id": "8cadab15-b7bd-4303-8ba3-4b4044b577e0",
      "position": 0,
    },
    {
      "child_id": "8cadab15-b7bd-4303-8ba3-4b4044b577e0",
      "parent_id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
      "position": 2,
    },
    {
      "child_id": "2953960c-9aa5-4c5a-b47d-42b20bdae370",
      "parent_id": "a7f94b39-a72f-4452-8ffc-f4aa652f43ed",
      "position": 0,
    },
    {
      "child_id": "378b6f72-9c3c-416c-97c5-252911e9cd3f",
      "parent_id": "a7f94b39-a72f-4452-8ffc-f4aa652f43ed",
      "position": 1,
    },
    {
      "child_id": "a7f94b39-a72f-4452-8ffc-f4aa652f43ed",
      "parent_id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
      "position": 3,
    },
    {
      "child_id": "3cbd8796-f203-4a9d-a4ff-687ba3b80c37",
      "parent_id": "57f74768-8c25-4106-9836-2b87196d3d87",
      "position": 0,
    },
    {
      "child_id": "21db6b00-a785-4ae7-8082-cfa15ed21d02",
      "parent_id": "57f74768-8c25-4106-9836-2b87196d3d87",
      "position": 1,
    },
    {
      "child_id": "57f74768-8c25-4106-9836-2b87196d3d87",
      "parent_id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
      "position": 4,
    },
    {
      "child_id": "d10ff0d3-3b4f-49ad-ae8e-d6c9c9629dcb",
      "parent_id": "5a7fafaf-beb2-45f2-9eff-dce0cba2049c",
      "position": 0,
    },
    {
      "child_id": "57bce452-1a40-4bb7-ba10-b2849c97543a",
      "parent_id": "5a7fafaf-beb2-45f2-9eff-dce0cba2049c",
      "position": 1,
    },
    {
      "child_id": "5a7fafaf-beb2-45f2-9eff-dce0cba2049c",
      "parent_id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
      "position": 5,
    },
    {
      "child_id": "bb912caa-9970-4963-8042-94608b758224",
      "parent_id": "b029763f-e4eb-44bf-a86f-f1004cc0339d",
      "position": 0,
    },
    {
      "child_id": "c3ea33be-b707-4bf7-8220-c00525bfa2d8",
      "parent_id": "b029763f-e4eb-44bf-a86f-f1004cc0339d",
      "position": 1,
    },
    {
      "child_id": "b029763f-e4eb-44bf-a86f-f1004cc0339d",
      "parent_id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
      "position": 6,
    },
    {
      "child_id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
      "parent_id": "06e18375-1962-47be-b8d1-b272b0013bea",
      "position": 0,
    },
    {
      "child_id": "11ccce97-f66b-420b-a9d5-f78c85d8acfa",
      "parent_id": "17feedf5-f0e2-4ba7-a88d-4ebb45b9bb41",
      "position": 0,
    },
    {
      "child_id": "17feedf5-f0e2-4ba7-a88d-4ebb45b9bb41",
      "parent_id": "d1a210c2-1615-403d-b825-e948681521b1",
      "position": 0,
    },
    {
      "child_id": "b360443d-8fef-4de0-b676-b4cecfc6a654",
      "parent_id": "6454eb56-79de-4d1d-bab9-f5f5a9fd6c53",
      "position": 0,
    },
    {
      "child_id": "6454eb56-79de-4d1d-bab9-f5f5a9fd6c53",
      "parent_id": "d1a210c2-1615-403d-b825-e948681521b1",
      "position": 1,
    },
    {
      "child_id": "922c7053-7d2c-47d8-b279-a896a56e2800",
      "parent_id": "479982d5-ae7d-446e-bcd2-3a3942ba1f0e",
      "position": 0,
    },
    {
      "child_id": "e485a86a-1407-4e05-86e3-35084394af6e",
      "parent_id": "01cc1b04-95c7-4761-a14d-fd748bf0f506",
      "position": 0,
    },
    {
      "child_id": "e15b6b62-e80f-4e78-8b62-403f57963d31",
      "parent_id": "01cc1b04-95c7-4761-a14d-fd748bf0f506",
      "position": 1,
    },
    {
      "child_id": "01cc1b04-95c7-4761-a14d-fd748bf0f506",
      "parent_id": "479982d5-ae7d-446e-bcd2-3a3942ba1f0e",
      "position": 1,
    },
    {
      "child_id": "479982d5-ae7d-446e-bcd2-3a3942ba1f0e",
      "parent_id": "d1a210c2-1615-403d-b825-e948681521b1",
      "position": 2,
    },
    {
      "child_id": "d1a210c2-1615-403d-b825-e948681521b1",
      "parent_id": "f4ef812a-2cc4-465f-88a2-c3d204133e3e",
      "position": 0,
    },
    {
      "child_id": "f4ef812a-2cc4-465f-88a2-c3d204133e3e",
      "parent_id": "06e18375-1962-47be-b8d1-b272b0013bea",
      "position": 1,
    },
    {
      "child_id": "06e18375-1962-47be-b8d1-b272b0013bea",
      "parent_id": "79455613-836f-44cb-9036-de551c6c0d23",
      "position": 1,
    },
  ],
  "rows": [
    {
      "id": "79455613-836f-44cb-9036-de551c6c0d23",
      "name": "/",
      "type": "DOCUMENT",
      "value": null,
    },
    {
      "id": "04e1b12b-c42d-4c67-916c-8acf9dec75f6",
      "name": "!doctype",
      "type": "DOCUMENT_TYPE",
      "value": "!DOCTYPE html",
    },
    {
      "id": "06e18375-1962-47be-b8d1-b272b0013bea",
      "name": "html",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "896c8aa4-c868-4c9c-af0b-c2969dd12c18",
      "name": "head",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "882bbc2b-2c53-46f0-8e9e-d1bd3e5d0e5f",
      "name": "meta",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "2115feec-c2a2-410a-b3a7-9e2593d592a3",
      "name": "charSet",
      "type": "ATTRIBUTE",
      "value": ""utf8"",
    },
    {
      "id": "0d8afb3f-416a-48bc-8631-61872af9e880",
      "name": "meta",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "4f81f0fe-ada5-4a0a-91d4-cdb40e492271",
      "name": "content",
      "type": "ATTRIBUTE",
      "value": ""width=device-width,initial-scale=1"",
    },
    {
      "id": "de02bea8-04cd-4f5d-807f-2bcd3daf6ceb",
      "name": "name",
      "type": "ATTRIBUTE",
      "value": ""viewport"",
    },
    {
      "id": "8cadab15-b7bd-4303-8ba3-4b4044b577e0",
      "name": "title",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "e57657c7-d63c-44a2-a307-b2521513f1dc",
      "name": null,
      "type": "TEXT",
      "value": "Example Domainz",
    },
    {
      "id": "a7f94b39-a72f-4452-8ffc-f4aa652f43ed",
      "name": "script",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "2953960c-9aa5-4c5a-b47d-42b20bdae370",
      "name": "src",
      "type": "ATTRIBUTE",
      "value": ""/m/update.js"",
    },
    {
      "id": "378b6f72-9c3c-416c-97c5-252911e9cd3f",
      "name": "type",
      "type": "ATTRIBUTE",
      "value": ""module"",
    },
    {
      "id": "57f74768-8c25-4106-9836-2b87196d3d87",
      "name": "script",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "3cbd8796-f203-4a9d-a4ff-687ba3b80c37",
      "name": "src",
      "type": "ATTRIBUTE",
      "value": ""/m/edit.js"",
    },
    {
      "id": "21db6b00-a785-4ae7-8082-cfa15ed21d02",
      "name": "type",
      "type": "ATTRIBUTE",
      "value": ""module"",
    },
    {
      "id": "5a7fafaf-beb2-45f2-9eff-dce0cba2049c",
      "name": "link",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "d10ff0d3-3b4f-49ad-ae8e-d6c9c9629dcb",
      "name": "href",
      "type": "ATTRIBUTE",
      "value": ""/s/base.css"",
    },
    {
      "id": "57bce452-1a40-4bb7-ba10-b2849c97543a",
      "name": "rel",
      "type": "ATTRIBUTE",
      "value": "["stylesheet"]",
    },
    {
      "id": "b029763f-e4eb-44bf-a86f-f1004cc0339d",
      "name": "link",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "bb912caa-9970-4963-8042-94608b758224",
      "name": "href",
      "type": "ATTRIBUTE",
      "value": ""/s/edit.css"",
    },
    {
      "id": "c3ea33be-b707-4bf7-8220-c00525bfa2d8",
      "name": "rel",
      "type": "ATTRIBUTE",
      "value": "["stylesheet"]",
    },
    {
      "id": "f4ef812a-2cc4-465f-88a2-c3d204133e3e",
      "name": "body",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "d1a210c2-1615-403d-b825-e948681521b1",
      "name": "div",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "17feedf5-f0e2-4ba7-a88d-4ebb45b9bb41",
      "name": "h1",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "11ccce97-f66b-420b-a9d5-f78c85d8acfa",
      "name": null,
      "type": "TEXT",
      "value": "Header is all we got yo",
    },
    {
      "id": "6454eb56-79de-4d1d-bab9-f5f5a9fd6c53",
      "name": "p",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "b360443d-8fef-4de0-b676-b4cecfc6a654",
      "name": null,
      "type": "TEXT",
      "value": "Hi there. This is a message from your cats. We are here to tell you that this domain is for use in illustrative examples in documents.",
    },
    {
      "id": "479982d5-ae7d-446e-bcd2-3a3942ba1f0e",
      "name": "p",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "922c7053-7d2c-47d8-b279-a896a56e2800",
      "name": null,
      "type": "TEXT",
      "value": "If you want more, ",
    },
    {
      "id": "01cc1b04-95c7-4761-a14d-fd748bf0f506",
      "name": "a",
      "type": "ELEMENT",
      "value": null,
    },
    {
      "id": "e485a86a-1407-4e05-86e3-35084394af6e",
      "name": null,
      "type": "TEXT",
      "value": "More information...",
    },
    {
      "id": "e15b6b62-e80f-4e78-8b62-403f57963d31",
      "name": "href",
      "type": "ATTRIBUTE",
      "value": ""https://www.iana.org/domains/example"",
    },
  ],
}
`;
